--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -1,7 +1,7 @@
 body {
     font: 20px Montserrat, sans-serif;
     line-height: 1.8;
-    color: #f5f6f7;
+    color: black;
   }
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
