--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -1,11 +1,10 @@
 body {
     font: 20px Montserrat, sans-serif;
     line-height: 1.8;
-    color: #f5f6f7;
+    color: #030d18;
   }
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
-  
   
   
   .container-fluid {
