--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,10 +1,12 @@
 
 footer {
-  margin: 0;
-  padding: 10px;
+  padding-top: 10px;
   color: white;
   background: black;
-  position: relative;
+  position: fixed;
+  bottom: 0;
+  opacity: 50%;
   text-align: center;
   height: 40px;
+  width: 100%
 }
