messing with styling

--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -18,8 +18,12 @@ body {
   } 
    
   img {
-    height:60%;
+    height:50%;
     padding: 14px
   }
 
-  
+  h5 {
+    font-family: 'Cedarville Cursive', cursive;
+    font-size: 30px;
+    margin-left: 20px;
+}
