--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -31,7 +31,7 @@ body {
 .card-home {
   align-items: center;
   justify-content: center;
-  /* background-color: rgb(65, 58, 58); */
+  background-color: rgb(65, 58, 58);
   border: 5px solid black;
   margin-left: auto;
   margin-right: auto;
