--- a/client/src/components/Reviews/index.css
+++ b/client/src/components/Reviews/index.css
@@ -235,7 +235,7 @@ main {
 .next-btn:hover {
   color: var(--clr-primary-5);
 }
-.random-btn {
+.review-btn {
   margin-top: 0.5rem;
   background: var(--clr-primary-10);
   color: var(--clr-primary-5);
