--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -22,7 +22,7 @@ body {
     padding: 14px
   }
 
-  h5 {
+  .card-title {
     font-family: 'Cedarville Cursive', cursive;
     font-size: 30px;
     margin-left: 20px;
@@ -36,6 +36,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   padding: 5px;
+  /* height: 500px; */
 }
 
 .card-body {
