--- a/client/src/pages/show.css
+++ b/client/src/pages/show.css
@@ -4,9 +4,11 @@
   position:relative;
   margin-top: 20px;
   font-size: larger;
+  text-align: center;
   
 }
 h3, h5 {
   margin-left: 60px;
   margin-top: 30px;
+  text-align: center;
 }
