--- a/client/src/components/Reviews/index.css
+++ b/client/src/components/Reviews/index.css
@@ -196,14 +196,14 @@ main {
   place-items: center;
   border-radius: 50%;
   transform: translateY(25%);
-  background: var(--clr-primary-5);
+  background: gold;
   color: var(--clr-white);
 }
 .img-container::before {
   content: '';
   width: 100%;
   height: 100%;
-  background: var(--clr-primary-5);
+  background: khaki;
   position: absolute;
   top: -0.25rem;
   right: -0.5rem;
@@ -215,15 +215,16 @@ main {
 .job {
   margin-bottom: 0.5rem;
   text-transform: uppercase;
-  color: var(--clr-primary-5);
+  color: black;
   font-size: 0.85rem;
 }
 .info {
   margin-bottom: 0.75rem;
+  color: grey
 }
 .prev-btn,
 .next-btn {
-  color: var(--clr-primary-7);
+  color: black;
   font-size: 1.25rem;
   background: transparent;
   border-color: transparent;
@@ -237,8 +238,9 @@ main {
 }
 .review-btn {
   margin-top: 0.5rem;
-  background: var(--clr-primary-10);
-  color: var(--clr-primary-5);
+  background: white;
+  outline: 1px solid grey;
+  color: grey;
   padding: 0.25rem 0.5rem;
   text-transform: capitalize;
   border-radius: var(--radius);
