--- a/client/src/pages/create.css
+++ b/client/src/pages/create.css
@@ -2,7 +2,11 @@
     align-items: center;
     justify-content: center;
     background-color: lightgrey;
-    border: 5px solid black;
+    border: 6px solid khaki;
     margin-left: auto;
     margin-right: auto;
+}
+
+.submit-button-create{
+    color: grey
 }
