--- a/client/src/pages/show.css
+++ b/client/src/pages/show.css
@@ -11,4 +11,11 @@ h3, h5 {
   margin-left: 60px;
   margin-top: 30px;
   text-align: center;
+  color: whitesmoke;
+}
+
+body {
+  background-image: url('https://images.unsplash.com/photo-1546484396-fb3fc6f95f98?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHw%3D&w=2000&q=80');
+
+
 }
