finalizing styling on all pages, working on footer

--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -1,21 +1,19 @@
 .navbar-brand {
   margin-left: 20px;
-  font-size: 50px;
+  font-size: 45px;
   margin-top: -40px;
+  font-family: "Ribeye Marrow", cursive;
 }
 
-.navbar{
-  background-color: #FFFFFF;
+.navbar {
+  background-color: rgb(219, 214, 168);
   margin-bottom: 20px;
   height: 85px;
-  
 }
-.format{
+.format {
   margin-top: 10px;
 }
-/* .create-button{
-  margin-left: 10px;
-} */
-.create-button{
+
+.create-button {
   margin-right: 10px;
 }
