--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,13 +1,13 @@
-
+/* 
 footer {
   padding-top: 10px;
   color: black;
   background: #FFFFFF;
   position: relative;
   /* bottom: -20; */
-  opacity: 40%;
+  /* opacity: 40%;
   text-align: center;
   height: 40px;
   width: 100%;
-  margin-top: 25%;
-}
+  margin-top: 25%; */
+/* } */ 
