--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -1,31 +1,36 @@
 body {
-    font: 20px Montserrat, sans-serif;
-    line-height: 1.8;
-    color: #030d18;
-  }
-  p {font-size: 16px;}
-  .margin {margin-bottom: 45px;}
-  
-  
-  .container-fluid {
-    padding-top: 30px;
-    padding-bottom: 50px;
-  }
-  
+  font: 20px Montserrat, sans-serif;
+  line-height: 1.8;
+  color: #030d18;
+}
+p {
+  font-size: 16px;
+}
+.margin {
+  margin-bottom: 45px;
+}
 
-  .btn-default {
-      margin: 10px;
-  } 
-   
-  img {
-    height:50%;
-    padding: 14px
-  }
+.card-row {
+  margin-bottom: 50px;
+}
+.container-fluid {
+  padding-top: 30px;
+  padding-bottom: 50px;
+}
 
-  .card-title {
-    font-family: 'Cedarville Cursive', cursive;
-    font-size: 30px;
-    margin-left: 20px;
+.btn-default {
+  margin: 10px;
+}
+
+img {
+  height: 50%;
+  padding: 14px;
+}
+
+.card-title {
+  font-family: "Cedarville Cursive", cursive;
+  font-size: 30px;
+  margin-left: 20px;
 }
 
 .card-home {
@@ -39,17 +44,18 @@ body {
   height: 550px;
 }
 
-a{
-  color: grey
+a {
+  color: grey;
 }
 
 a.stretched-link {
   color: khaki;
 }
 
-.card-text{
-  color: #ffffff
+.card-text {
+  color: #ffffff;
 }
 
-
-
+.reviews-class {
+  margin-bottom: 20px;
+}
