--- a/client/src/pages/show.css
+++ b/client/src/pages/show.css
@@ -1,13 +1,13 @@
-.usernameUpper{
+.usernameUpper {
   text-transform: capitalize;
   margin-left: 120px;
-  position:relative;
+  position: relative;
   margin-top: 20px;
   font-size: larger;
   text-align: center;
-  
 }
-h3, h5 {
+h3,
+h5 {
   margin-left: 60px;
   margin-top: 30px;
   text-align: center;
@@ -15,7 +15,5 @@ h3, h5 {
 }
 
 body {
-  background-image: url('https://images.unsplash.com/photo-1546484396-fb3fc6f95f98?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHw%3D&w=2000&q=80');
-
-
+  background-image: url("https://images.unsplash.com/photo-1546484396-fb3fc6f95f98?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHw%3D&w=2000&q=80");
 }
