--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -1,7 +1,7 @@
 .navbar-brand {
   margin-left: 20px;
   font-size: 45px;
-  margin-top: -40px;
+  /* margin-top: -0px; */
   font-family: "Ribeye Marrow", cursive;
 }
 
@@ -10,8 +10,9 @@
   margin-bottom: 20px;
   height: 85px;
 }
-.format {
-  margin-top: 10px;
+.format-nav-bar {
+  margin-top: -30px;
+  margin-right: -90px;
 }
 
 .create-button {
