--- a/client/src/pages/detail.css
+++ b/client/src/pages/detail.css
@@ -2,13 +2,20 @@ img.detail {
   height: 120px;
   width: 120px;
 }
-.list-overflow-container {
-  margin-bottom: -80px;
+.list {
+  margin-bottom: -40px;
   border: none;
+  width: 100%;
+  /* overflow-x: scroll; */
+
 }
 
 form {
-  margin-bottom: 80px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  margin-left: 105px;
+  margin-right: 105px; 
+  
 }
 .list-group-item {
   text-transform: capitalize;
@@ -19,3 +26,4 @@ form {
   border: none;
   background-color: white;
 }
+
