--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -2,6 +2,8 @@
   margin-left: 20px;
   font-size: 50px;
   margin-top: -40px;
+  font-family: 'Special Elite', cursive;
+
 }
 
 .navbar{
@@ -19,3 +21,4 @@
 .create-button{
   margin-right: 10px;
 }
+
