Css to review button added

--- a/client/src/pages/detail.css
+++ b/client/src/pages/detail.css
@@ -18,6 +18,11 @@ form {
   margin-right: 105px; 
   
 }
+.reviewBtn{
+  background-color: rgb(214, 245, 77);
+  color: black;
+}
+
 .list-group-item {
   text-transform: capitalize;
 }
