--- a/client/src/pages/show.css
+++ b/client/src/pages/show.css
@@ -5,6 +5,7 @@
   margin-top: 20px;
   font-size: larger;
   text-align: center;
+  
 }
 h3 {
   font-family: "Cedarville Cursive", cursive;
@@ -27,4 +28,12 @@ h5 {
 
 body {
   background-image: url("https://images.unsplash.com/photo-1546484396-fb3fc6f95f98?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHw%3D&w=2000&q=80");
+}
+ 
+.users-all {
+  background-color: rgb(219, 214, 168);
+  opacity: 1;
+  border: 2px solid dimgray;
+  border-radius: 7px;
+  margin: 5px;
 }
