--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -31,6 +31,7 @@ img {
   font-family: "Cedarville Cursive", cursive;
   font-size: 30px;
   margin-left: 20px;
+  margin-top: -10px;
 }
 
 .card-home {
