--- a/client/src/pages/detail.css
+++ b/client/src/pages/detail.css
@@ -38,16 +38,19 @@ form {
   height: 30px;
   padding-right: 5px;
   margin: 10px;
-  
+  border-radius: 10px;
 }
 
 .website-link-txt {
-  margin-top: 13px;
+  margin-top: -13px;
   font-size: 20px;
   color: whitesmoke;
 }
 
 .align-btns {
   text-align: center;
-  margin-left: 440px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 15px;
+ 
 }
