--- a/client/src/pages/detail.css
+++ b/client/src/pages/detail.css
@@ -43,8 +43,9 @@ form {
 
 .website-link-txt {
   margin-top: 13px;
-  font-size: 20px;
+  font-size: 35px;
   color: whitesmoke;
+  font-family: 'Reenie Beanie', cursive;
 }
 
 .align-btns {
