margins on showall

--- a/client/src/pages/show.css
+++ b/client/src/pages/show.css
@@ -35,5 +35,8 @@ body {
   opacity: 1;
   border: 2px solid dimgray;
   border-radius: 7px;
-  margin: 5px;
+  margin-bottom: 5px;
+  margin-right: 120px;
+
 }
+
