styled review button

--- a/client/src/pages/detail.css
+++ b/client/src/pages/detail.css
@@ -19,7 +19,8 @@ form {
   
 }
 .reviewBtn{
-  background-color: rgb(214, 245, 77);
+  background-color: khaki;
+  border-radius: 10px;
   color: black;
 }
 
